tests/baselines/reference/iteratorSpreadInCall4.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInCall4.ts(15,1): error TS2557: Expected at least 1 arguments, but got a minimum of 0.
tests/cases/conformance/es6/spread/iteratorSpreadInCall4.ts(15,8): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/spread/iteratorSpreadInCall4.ts (2 errors) ====
    function foo(s1: symbol, ...s: symbol[]) { }
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    foo(...new SymbolIterator);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2557: Expected at least 1 arguments, but got a minimum of 0.
           ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.